fixed portfolio thumbnail spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -202,33 +202,31 @@ body {
     width: 100%;
 }
 
-.item li {
+.itemContainer {
+    width: 100%;
+  }
+  
+  .items {
+    padding: 0;
+  }
+  
+  .items li {
     display: inline-block;
     padding: 5px;
-
-}
-
-.itemsContainer {
+  }
+  
+  .items li img {
     width: 100%;
-}
-
-.items li img {
-    width: 100%;
-
-    -webkit-transition: all 0.2s linear, 1s;
-    -moz-transition: all 0.2s linear, 1s;
-    -o-transition: all 0.2s linear, 1s;
-    -ms-transition: all 0.2s linear, 1s;
-    -transition: all 0.2s linear, 1s;
-}
-
-.items .item {
+    transition: all .2s linear, 1s;
+  }
+  
+  .items .item {
     position: relative;
     display: block;
     overflow: hidden;
-}
-
-.items .icons {
+  }
+  
+  .items .icons {
     position: absolute;
     width: 90px;
     height: 40px;
@@ -237,77 +235,59 @@ body {
     margin: -20px auto 0 -47px;
     text-align: center;
     z-index: 3;
-}
-
-.items .icons i {
-    color: #fff;
-    font-size: 20px;
-    margin-top: 9px;
-}
-
-.items a {
+  }
+  
+  .items .icons a {
     width: 40px;
     height: 40px;
     background-color: #e1b12c;
     position: relative;
     display: inline-block;
-
-    -webkit-transition: all 0.2s linear, 0.2s;
-    -moz-transition: all 0.2s linear, 0.2s;
-    -o-transition: all 0.2s linear, 0.2s;
-    -ms-transition: all 0.2s linear, 0.2s;
-    -transition: all 0.2s linear, 0.2s;
-}
-
-.items .imageOverlay {
+    transition: all .2s linear, .2s;
+  }
+  
+  .items .icons i {
+    color: #fff;
+    font-size: 20px;
+    margin-top: 9px;
+  }
+  
+  .items .imageOverlay {
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0,0,0,.5);
     position: absolute;
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
     opacity: 0;
-
-    -webkit-transition: all 0.2s linear, 1s;
-    -moz-transition: all 0.2s linear, 1s;
-    -o-transition: all 0.2s linear, 1s;
-    -ms-transition: all 0.2s linear, 1s;
-    -transition: all 0.2s linear, 1s;
-}
-
-.items .item:hover .imageOverlay {
+    transition: all .2s linear, 1s;
+  }
+  
+  .items .item:hover .imageOverlay {
     opacity: 1;
-}
-
-.items .openButton {
+  }
+  
+  .items .openButton {
     float: left;
     left: -200px;
-}
-
-.items .projectLink {
+  }
+  
+  .items .projectLink {
     float: right;
     right: -200px;
-}
-
-.items .item:hover .openButton {
-    left: 0px;
-}
-
-.items .item:hover .projectLink {
-    right: 0px;
-}
-
-.items .item:hover img {
-    -webkit-transform: scale(1.05, 1.05);
-    -moz-transform: scale(1.05, 1.05);
-    -o-transform: scale(1.05, 1.05);
-    -ms-transform: scale(1.05, 1.05);
-    -transform: scale(1.05, 1.05);
-}
-
-.items {
-    padding: 0;
-}
+  }
+  
+  .items .item:hover .openButton {
+    left: 0;
+  }
+  
+  .items .item:hover .projectLink {
+    right: 0;
+  }
+  
+  .items .item:hover img {
+    transform: scale(1.05, 1.05);
+  }
 
 .copyrightSection {
     background-color: #000;
